--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <!--  TODO adicionar favicon posteriormente. -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend-Challenge</title>
   </head>
   <body>
