--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
     <title>Frontend-Challenge</title>
   </head>
   <body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
     <div id="root"></div>
   </body>
 </html>
